# CE-PiicoDev-Unified

./: CONTRIBUTING.md  I2CBase.py  I2CUnifiedMachine.py  I2CUnifiedMicroBit.py  LICENSE.md  PiicoDev_Unified.py  README.md  pyproject.toml
.github/workflows/: main.yml
doc/: CONTRIBUTING.md  METHODS.md
min/: PiicoDev_Unified.py  README.md
scripts/: i2c-setup.sh
